...
        Profile(modifier)
    }
}

enum class HomeSections(@StringRes val title: Int, @DrawableRes val icon: Int, val route: String) {
    FEED(R.string.home_feed, R.drawable.ic_home, "home/feed"),
    SEARCH(R.string.home_search, R.drawable.ic_search, "home/search"),
    CART(R.string.home_cart, R.drawable.ic_shopping_cart, "home/cart"),
    PROFILE(R.string.home_profile, R.drawable.ic_account_circle, "home/profile"),
}

@Composable
fun CookieBottomBar(
    tabs: Array<HomeSections>,
    currentRoute: String,
...
