...
/**
 * Static data
 */

private val tastyTreats = SnackCollection(
    id = 1L,
    name = "Android's picks",
    type = CollectionType.Highlight,
    snacks = snacks.subList(0, 13),
)

private val popular = SnackCollection(
    id = Random.nextLong(),
...
