...
    <string name="cart_decrease_error">There was an error and the quantity couldn\'t be decreased. Please try again.</string>
    <string name="label_remove">Remove item</string>

    <!-- Quantity Selector -->
    <string name="label_increase">Increase</string>
    <string name="label_decrease">Decrease</string>
    <string name="work_in_progress">This is currently work in progress</string>
    <string name="grab_beverage">Grab a beverage and check back later!</string>
    <string name="see_more">SEE MORE</string>
    <string name="see_less">SEE LESS</string>
    <string name="remove_item">Remove Item</string>
    <string name="reset">Reset</string>
    <string name="sort">Sort</string>
...
